--- a/css/main.css
+++ b/css/main.css
@@ -54,4 +54,14 @@
   text-align: center;
   font-weight: 700;
   margin-bottom: 50px;
+}
+
+@media (max-width: 500px) {
+  .app {
+    max-width: 100%;
+    padding: 50px 10px;
+  }
+  .cards {
+    grid-gap: 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
