--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -13,7 +13,7 @@
 }
 
 .card {
-    border: 1px solid #000;
+    border: 1px solid #252525;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,10 +21,30 @@
     font-weight: 700;
     cursor: pointer;
     border-radius: 20px;
+    background: #c8c8c8;
+    transition: all ease-in .4s;
 }
 
 .card-active {
     pointer-events: none;
+}
+
+.card-animation {
+    animation: card .4s ease-in-out forwards;
+}
+
+@keyframes card {
+    33% {
+        transform: scaleX(0);
+    }
+    66% {
+        transform: scaleX(0);
+        background: #fff;
+    }
+    100% {
+        transform: scaleX(1);
+        background: #fff;
+    }
 }
 
 .num {
