--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -33,6 +33,7 @@
     animation: card .4s ease-in-out forwards;
 }
 
+
 @keyframes card {
     33% {
         transform: scaleX(0);
@@ -49,6 +50,8 @@
 
 .num {
     opacity: 0;
+    max-width: 100%;
+    padding: 20px;
 }
 
 .num-active {
