--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
   min-height: 70vh;
   margin: 0px auto;
   padding: 50px 0px;
+  position: relative;
 }
 
 .cards {
@@ -47,6 +48,7 @@
 .card-animation {
   -webkit-animation: card 0.4s ease-in-out forwards;
           animation: card 0.4s ease-in-out forwards;
+  pointer-events: none;
 }
 
 @-webkit-keyframes card {
@@ -97,6 +99,47 @@
   text-align: center;
   font-weight: 700;
   margin-bottom: 50px;
+}
+
+.winner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.winner-header {
+  text-align: center;
+  font-size: 28px;
+  font-weight: 700;
+  padding: 50px 0px;
+}
+
+.reload {
+  display: block;
+  margin: 0px auto;
+  width: 50px;
+  height: 50px;
+  border-radius: 20px;
+  background: #c8c8c8;
+}
+
+.timer {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 @media (max-width: 500px) {
