--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -3,6 +3,7 @@
     min-height: 70vh;
     margin: 0px auto;
     padding: 50px 0px;
+    position: relative;
 }
 
 .cards {
@@ -31,6 +32,7 @@
 
 .card-animation {
     animation: card .4s ease-in-out forwards;
+    pointer-events: none;
 }
 
 
@@ -63,6 +65,38 @@
     text-align: center;
     font-weight: 700;
     margin-bottom: 50px;
+}
+
+.winner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.winner-header {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 700;
+    padding: 50px 0px;
+}
+
+.reload {
+    display: block;
+    margin: 0px auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+    background: #c8c8c8;
+}
+
+.timer {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 @media (max-width: 500px) {
