--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -4,6 +4,9 @@
     margin: 0px auto;
     padding: 50px 0px;
     position: relative;
+    * {
+        font-family: 'Circe', sans-serif;
+    }
 }
 
 .cards {
@@ -85,10 +88,16 @@
 .reload {
     display: block;
     margin: 0px auto;
-    width: 50px;
+    width: 300px;
     height: 50px;
-    border-radius: 20px;
+    border-radius: 5px;
     background: #c8c8c8;
+    color: #252525;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .timer {
@@ -97,6 +106,31 @@
     left: 20px;
     font-size: 20px;
     font-weight: 700;
+}
+
+.start {
+    padding-top: 80px;
+    min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &-header {
+        font-size: 28px;
+        text-align: center;
+        margin-bottom: 60px;
+    }
+    &-button {
+        border: none;
+        border-radius: 5px;
+        background: #c8c8c8;
+        width: 300px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
 }
 
 @media (max-width: 500px) {
