--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,9 +1,15 @@
+body {
+    overflow: hidden;
+}
+
 .app {
     max-width: 440px;
-    min-height: 70vh;
+    min-height: 100vh;
+    overflow: hidden;
     margin: 0px auto;
     padding: 50px 0px;
     position: relative;
+    background: #f4f4f4;
     * {
         font-family: 'Circe', sans-serif;
     }
@@ -67,7 +73,7 @@
     font-size: 20px;
     text-align: center;
     font-weight: 700;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .winner {
@@ -98,6 +104,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    margin-top: 30px;
 }
 
 .timer {
@@ -109,8 +116,8 @@
 }
 
 .start {
-    padding-top: 80px;
-    min-height: 70vh;
+    padding-top: 100px;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,7 +137,38 @@
         justify-content: center;
         font-size: 18px;
         margin-bottom: 20px;
+        color: #252525;
     }
+    &-input {
+        height: 60px;
+        width: 300px;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #252525;
+        margin-bottom: 10px;
+        border-radius: 5px;
+        border: 1px solid #c8c8c8;
+    }
+}
+
+.developer {
+    position: absolute;
+    bottom: 20px;
+    font-size: 14px;
+    text-decoration: none;
+    color: #252525;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.rules-text {
+    text-align: center;
+    padding: 0px 30px;
 }
 
 @media (max-width: 500px) {
