--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,10 @@ body {
 
 .app {
   max-width: 440px;
-  min-height: 100vh;
+  min-height: 95vh;
   overflow: hidden;
   margin: 0px auto;
-  padding: 50px 0px;
+  padding: 50px 0px 0px 0px;
   position: relative;
   background: #f4f4f4;
 }
@@ -24,14 +24,15 @@ body {
 }
 
 .cards {
-  min-height: 70vh;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
+  padding: 0px 6px;
 }
 
 .card {
   border: 1px solid #252525;
+  min-height: 110px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
