--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@
 }
 .app * {
   font-family: "Circe", sans-serif;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .cards {
@@ -235,6 +239,11 @@
 .rules-text {
   text-align: center;
   padding: 0px 30px;
+}
+
+.record-text {
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 500px) {
